Functional version, is still under development

--- a/data/output.bib
+++ b/data/output.bib
@@ -102,7 +102,7 @@
     ethical issues linked to AI, emphasizing the need for cooperation
     among different stakeholders to use AI responsibly in medicine,
     focusing on protecting data privacy and minimizing reliance on
-    technology. ~ ABSTRACT The introduction of Artificial Intelligence
+    technology.  ABSTRACT The introduction of Artificial Intelligence
     through Large Language Models (AI-LLM) into medicine holds great
     promise for improving patient care and medical education, especially
     in obstetrics and gynecology. AI-LLM can significantly improve
@@ -709,7 +709,7 @@
     and Zheng, Jinjian and Feng, J. and Feng, Jianxing and Hao, C. and
     Hao, Chuanyong and Yang, Y. and Yang, Yanyan and Nan, Wang and Wang,
     N and Xie, H. and Xie, Hua},
-  title = {Use of Real‐time Artificial Intelligence in Detection of
+  title = {Use of Real-time Artificial Intelligence in Detection of
     Abnormal Image Patterns in Standard Sonographic Reference Planes for
     Screening for Fetal Intracranial Malformations},
   journal = {Ultrasound in Obstetrics \& Gynecology},
@@ -805,29 +805,7 @@
     gynecology oncology. Web of Science, PubMed, and Scopus databases
     were searched. All studies were imported to RAYYAN QCRI software.
     The overall quality of the included studies was assessed using
-    QUADAS‐AI tool. Fifty studies were included, of these 37/50 (74.0\%)
-    on ovarian masses or ovarian cancer, 5/50 (10.0\%) on endometrial
-    cancer, 5/50 (10.0\%) on cervical cancer, and 3/50 (6.0\%) on other
-    malignancies. Most studies were at high risk of bias for subject
-    selection (i.e., sample size, source, or scanner model were not
-    specified; data were not derived from open‐source datasets; imaging
-    preprocessing was not performed) and index test (AI models was not
-    externally validated) and at low risk of bias for reference standard
-    (i.e., the reference standard correctly classified the target
-    condition) and workflow (i.e., the time between index test and
-    reference standard was reasonable). Most studies presented machine
-    learning models (33/50, 66.0\%) for the diagnosis and
-    histopathological correlation of ovarian masses, while others
-    focused on automatic segmentation, reproducibility of radiomics
-    features, improvement of image quality, prediction of therapy
-    resistance, progression‐free survival, and genetic mutation. The
-    current evidence supports the role of AI as a complementary clinical
-    and research tool in diagnosis, patient stratification, and
-    prediction of histopathological correlation in gynecological
-    malignancies. For example, the high performance of AI models to
-    discriminate between benign and malignant ovarian masses or to
-    predict their specific histology can improve the diagnostic accuracy
-    of imaging methods.}
+    QUADAS-AI tool. Fifty studies were included, of these 37/50 (74.0}
 }
 @article{Rescinito2023,
   author = {Rescinito, Riccardo and Ratti, Matteo and Payedimarri, Anil
@@ -856,26 +834,7 @@
     20 studies reporting the use of AI/ML models for the prediction of
     IUGR. Out of these, 10 studies were used for the quantitative
     meta-analysis. The most common input variable to predict IUGR was
-    the fetal heart rate variability (n = 8, 40\%), followed by the
-    biochemical or biological markers (n = 5, 25\%), DNA profiling data
-    (n = 2, 10\%), Doppler indices (n = 3, 15\%), MRI data (n = 1, 5\%),
-    and physiological, clinical, or socioeconomic data (n = 1, 5\%).
-    Overall, we found that AI/ML techniques could be effective in
-    predicting and identifying fetuses at risk for IUGR during pregnancy
-    with the following pooled overall diagnostic performance:
-    sensitivity = 0.84 (95\% CI 0.80–0.88), specificity = 0.87 (95\% CI
-    0.83–0.90), positive predictive value = 0.78 (95\% CI 0.68–0.86),
-    negative predictive value = 0.91 (95\% CI 0.86–0.94) and diagnostic
-    odds ratio = 30.97 (95\% CI 19.34–49.59). In detail, the RF-SVM
-    (Random Forest–Support Vector Machine) model (with 97\% accuracy)
-    showed the best results in predicting IUGR from FHR parameters
-    derived from CTG. Conclusions: our findings showed that AI/ML could
-    be part of a more accurate and cost-effective screening method for
-    IUGR and be of help in optimizing pregnancy outcomes. However,
-    before the introduction into clinical daily practice, an appropriate
-    algorithmic improvement and refinement is needed, and the importance
-    of quality assessment and uniform diagnostic criteria should be
-    further emphasized.}
+    the fetal heart rate variability (n = 8, 40}
 }
 @article{Devoe2025,
   author = {Devoe, Lawrence D. and Muhanna, Maya and Maher, James and
@@ -892,9 +851,9 @@
     specific obstetric problems, and assess AI’s possible effects on
     obstetric care. Searches were performed in PubMed (MeSH), MEDLINE,
     Ovid, ClinicalTrials.gov, Google Scholar, and Web of Science using a
-    combination of keywords and text words related to ”obstetrics,”
-    ”pregnancy,” ”artificial intelligence,” ”machine learning,” ”deep
-    learning,” and ”neural networks,” for articles published between
+    combination of keywords and text words related to “obstetrics,”
+    “pregnancy,” “artificial intelligence,” “machine learning,” “deep
+    learning,” and “neural networks,” for articles published between
     June 1, 2019, and May 31, 2024. A total of 1,768 articles met at
     least one search criterion. After eliminating reviews, duplicates,
     retractions, inactive research protocols, unspecified AI programs,
@@ -1036,25 +995,13 @@
     and model performances were compared based on accuracy rates and
     other evaluation metrics. Results Experimental results show that the
     CatBoost model provides the highest success rate, with an accuracy
-    rate of 95.31\%. In addition, the XGBoost and LightGBM models
-    exhibited high performance, with accuracy rates of 95.19\% and
-    94.84\%, respectively. The study also examines the effects of the
-    class imbalance problem on model performance in detail and evaluates
-    various strategies to reduce this imbalance. Conclusion The findings
-    show that gradient boosting-based machine learning models have
-    significant potential in Down syndrome risk prediction. This
-    approach is expected to contribute to the reduction of unnecessary
-    invasive tests and improve clinical decision-making processes by
-    increasing the accuracy rate in prenatal screening processes. Future
-    studies should aim to increase the generalization capacity of the
-    model on larger data sets and to provide integration with different
-    machine learning algorithms.}
+    rate of 95.31}
 }
 @article{Dhombres2022,
   author = {Dhombres, Ferdinand and Bonnard, Jules and Bailly, Kévin and
     Maurice, Paul and Maurice, P and Papageorghiou, Aris and
     Papageorghiou, Aris T. and Jouannic, Jean-Marie and Jouannic,
-    Jean‐Marie},
+    Jean-Marie},
   title = {Contributions of Artificial Intelligence Reported in
     {Obstetrics} and {Gynecology} Journals: A Systematic Review.},
   journal = {Journal of Medical Internet Research},
@@ -1071,10 +1018,10 @@
     others.The aim of this study was to provide a systematic review to
     establish the actual contributions of AI reported in OB/GYN
     discipline journals.The PubMed database was searched for citations
-    indexed with ”artificial intelligence” and at least one of the
+    indexed with “artificial intelligence” and at least one of the
     following medical subject heading (MeSH) terms between January 1,
-    2000, and April 30, 2020: ”obstetrics”; ”gynecology”; ”reproductive
-    techniques, assisted”; or ”pregnancy.” All publications in OB/GYN
+    2000, and April 30, 2020: “obstetrics”; “gynecology”; “reproductive
+    techniques, assisted”; or “pregnancy.” All publications in OB/GYN
     core disciplines journals were considered. The selection of journals
     was based on disciplines defined in Web of Science. The publications
     were excluded if no AI process was used in the study. Review,
@@ -1085,25 +1032,7 @@
     contributions, and (6) description of the validation of the AI
     process.The PubMed search retrieved 579 citations and 66
     publications met the selection criteria. All OB/GYN subdomains were
-    covered: obstetrics (41\%, 27/66), gynecology (3\%, 2/66), assisted
-    reproductive medicine (33\%, 22/66), early pregnancy (2\%, 1/66),
-    and fetal medicine (21\%, 14/66). Both machine learning methods
-    (39/66) and knowledge base methods (25/66) were represented. Machine
-    learning used imaging, numerical, and clinical data sets. Knowledge
-    base methods used mostly omics data sets. The actual contributions
-    of AI were method/algorithm development (53\%, 35/66), hypothesis
-    generation (42\%, 28/66), or software development (3\%, 2/66).
-    Validation was performed on one data set (86\%, 57/66) and no
-    external validation was reported. We observed a general rising trend
-    in publications related to AI in OB/GYN over the last two decades.
-    Most of these publications (82\%, 54/66) remain out of the scope of
-    the usual OB/GYN journals.In OB/GYN discipline journals, mostly
-    preliminary work (eg, proof-of-concept algorithm or method) in AI
-    applied to this discipline is reported and clinical validation
-    remains an unmet prerequisite. Improvement driven by new AI research
-    guidelines is expected. However, these guidelines are covering only
-    a part of AI approaches (nonsymbolic) reported in this review;
-    hence, updates need to be considered.}
+    covered: obstetrics (41}
 }
 @article{Reddy2025,
   author = {Reddy, Anuradha},
@@ -1130,7 +1059,7 @@
 }
 @article{Gomez-Jemes2022,
   author = {Gómez-Jemes, Lola and Oprescu, Andreea Madalina and
-    Chimenea, Ángel and García-Díaz, Lutgardo and García‐Díaz, Lutgardo
+    Chimenea, Ángel and García-Díaz, Lutgardo and García-Díaz, Lutgardo
     and Romero-Ternero, M. C.},
   title = {Machine {Learning} to {Predict} {Pre-Eclampsia} and
     {Intrauterine} {Growth} {Restriction} in {Pregnant} {Women}},
@@ -1160,9 +1089,9 @@
     size of the data and the unbalance of the class.}
 }
 @article{Xie2020,
-  author = {Xie, Hong‐Ning and Xie, Hong-Ning and Xie, Hongning and
+  author = {Xie, Hong-Ning and Xie, Hong-Ning and Xie, Hongning and
     Wang, Nan and Nan, Wang and He, Miao and Zhang, Lihe and Zhang,
-    Li‐He and Cai, Hongmin and Xian, Jianbo and Lin, Min and Lin,
+    Li-He and Cai, Hongmin and Xian, Jianbo and Lin, Min and Lin,
     Meifang and Lin, Mei-Fang and Zheng, Jinjian and Zheng, Jv and Yang,
     Yanyan and Yang, Yongzhong},
   title = {Using Deep-Learning Algorithms to Classify Fetal Brain
@@ -1191,19 +1120,7 @@
     specificity were calculated for classification accuracy assessment.
     Additionally, for abnormal images, how well a lesion was localized
     was determined. RESULTS: Segmentation precision, recall and DICE
-    were 97.9\%, 90.9\% and 94.1\%, respectively. For classification the
-    overall accuracy was 96.3\%. The sensitivity and specificity for
-    abnormal images were 96.9\% and 95.9\%, respectively. The area under
-    the receiver operating characteristic curve was 0.989 (95\% CI:
-    0.986-0.991). For 2491 abnormal fetal brain images, the lesions were
-    precisely, closely and irrelevantly located in 61.6\% (1535/2491),
-    24.7\% (614/2491) and 13.7\% (342/2491), respectively. CONCLUSIONS:
-    Deep learning algorithms could be trained for segmentation and
-    classification of normal and abnormal images and provide heat maps
-    for lesion localization. This study laid a foundation for further
-    research on the differential diagnosis of fetal intracranial
-    abnormalities. This article is protected by copyright. All rights
-    reserved.}
+    were 97.9}
 }
 @article{Kuttan2025,
   author = {Kuttan, Nigil and Pundkar, Aditya and Gadkari, Charuta and
@@ -1369,11 +1286,11 @@
     the area of adaptive interventions, we expand the methodological
     survey with illustrative case studies that used RL in real practice.
     This invited article has undergone anonymous review and is intended
-    as a book chapter for the volume”Frontiers of Statistics and Data
+    as a book chapter for the volume“Frontiers of Statistics and Data
     Science”edited by Subhashis Ghoshal and Anindya Roy for the
     International Indian Statistical Association Series on Statistics
     and Data Science, published by Springer. It covers the material from
-    a short course titled”Artificial Intelligence in Precision and
+    a short course titled“Artificial Intelligence in Precision and
     Digital Health”taught by the author Bibhas Chakraborty at the IISA
     2022 Conference, December 26-30 2022, at the Indian Institute of
     Science, Bengaluru.}
@@ -1481,7 +1398,7 @@
 }
 @article{Dong2020,
   author = {Dong, Hsiang-Chun and Dong, Hsiang-Kai and Yu, Mu-Hsien and
-    Lin, Yi-Hsin and Chang, Chia-Ming and Chang, Cheng‐Chang and Chang,
+    Lin, Yi-Hsin and Chang, Chia-Ming and Chang, Cheng-Chang and Chang,
     Cheng-Chang},
   title = {Using {Deep} {Learning} with {Convolutional} {Neural}
     {Network} {Approach} to {Identify} the {Invasion} {Depth} of
@@ -1500,28 +1417,13 @@
     contrast-enhanced T1-weighted images (T1w) and T2-weighted images
     (T2w) from 72 patients who were diagnosed with surgico-pathological
     stage I endometrial carcinoma. We used the images from 24 patients
-    (33.3\%) to train the AI. The images from the remaining 48 patients
-    (66.7\%) were used to evaluate the accuracy of the model. The AI
-    then interpreted each of the cases and sorted them into stage IA or
-    IB. Compared with the accuracy rate of radiologists’ diagnoses
-    (77.8\%), the accuracy rate of AI interpretation in
-    contrast-enhanced T1w was higher (79.2\%), whereas that in T2w was
-    lower (70.8\%). The diagnostic accuracy was not significantly
-    different between radiologists and AI for both T1w and T2w. However,
-    AI was more likely to provide incorrect interpretations in patients
-    with coexisting benign leiomyomas or polypoid tumors. Currently, the
-    ability of this AI technology to make an accurate diagnosis has
-    limitations. However, in hospitals with limited resources, AI may be
-    able to assist in reading magnetic resonance images. We believe that
-    AI has the potential to assist radiologists or serve as a reasonable
-    alternative for pre-operative evaluation of the myometrial invasion
-    depth of stage I endometrial cancers.}
+    (33.3}
 }
 @article{Burgos-Artizzu2021,
   author = {Burgos-Artizzu, Xavier P. and Coronado-Gutiérrez, David and
     Valenzuela-Alcaráz, Brenda and Valenzuela-Alcaraz, Brenda and
     Vellvé, Kilian and Eixarch, E. and Eixarch, Elisenda and Crispi, F.
-    and Crispi, Fatima and Bonet‐Carne, Elisenda and Bonet-Carne,
+    and Crispi, Fatima and Bonet-Carne, Elisenda and Bonet-Carne,
     Elisenda and Bennásar, M. and Bennasar, Mar and Gratacós, Eduard},
   title = {Analysis of Maturation Features in Fetal Brain Ultrasound via
     Artificial Intelligence for the Estimation of Gestational Age.},
@@ -1549,20 +1451,7 @@
     currently used fetal biometry formulas on a series of 3,065 scans
     from 1,992 patients undergoing second (n=1,761) and/or third
     trimester (n=1,298) routine ultrasound, with known GA estimated from
-    Crown Rump Length in the first trimester. Results : Overall, 95\%
-    confidence interval (CI) of the error in GA estimation was 14.2 days
-    for the AI method alone and 11.0 when used in combination with fetal
-    biometries, compared to 12.9 days of the best method using standard
-    biometries alone. In the third trimester, lower 95\% CI error were
-    14.3 days for AI in combination with biometries and 17 days for
-    fetal biometries, while in the second trimester the CI error was 6.7
-    and 7 respectively. The performance differences were even larger in
-    the small for gestational age fetuses group (14.8 and 18.5
-    respectively). Conclusions : An automated AI method using standard
-    sonographic fetal planes yielded similar or lower error in GA
-    estimation compared to fetal biometries, especially in the third
-    trimester. These results support further research to improve the
-    performance of these methods in larger studies.}
+    Crown Rump Length in the first trimester. Results : Overall, 95}
 }
 @article{Drukker2020,
   author = {Drukker, Lior and Noble, J. Alison and Noble, J. A. and
@@ -1812,7 +1701,7 @@
     millions of observations and thousands of variables. Machine
     learning is starting to be successfully applied to several areas of
     medicine, including predictive analytics, decision support, natural
-    language processing of free‐text notes, and automatic interpretation
+    language processing of free-text notes, and automatic interpretation
     of electrophysiological recordings. Among all the applications of
     machine learning in medicine, deep learning for computer vision is
     the one that has enjoyed the greatest success. The emphasis of this
@@ -1821,7 +1710,7 @@
     learning and deep learning are increasingly integrated into the
     clinical workflow and applied in neuroimaging interpretation.
     Natural language processing is likely to gain increasing importance
-    in medicine in the near future. Complex decision‐making that mimics
+    in medicine in the near future. Complex decision-making that mimics
     human thinking with reinforcement learning is still far away on the
     horizon.}
 }
@@ -1859,29 +1748,7 @@
     CRD42018091176. Findings Our search identified 31587 studies, of
     which 82 (describing 147 patient cohorts) were included. 69 studies
     provided enough data to construct contingency tables, enabling
-    calculation of test accuracy, with sensitivity ranging from 9.7\% to
-    100.0\% (mean 79.1\%, SD 0.2) and specificity ranging from 38.9\% to
-    100.0\% (mean 88.3\%, SD 0.1). An out-of-sample external validation
-    was done in 25 studies, of which 14 made the comparison between deep
-    learning models and health-care professionals in the same sample.
-    Comparison of the performance between health-care professionals in
-    these 14 studies, when restricting the analysis to the contingency
-    table for each study reporting the highest accuracy, found a pooled
-    sensitivity of 87.0\% (95\% CI 83.0–90.2) for deep learning models
-    and 86.4\% (79.9–91.0) for health-care professionals, and a pooled
-    specificity of 92.5\% (95\% CI 85.1–96.4) for deep learning models
-    and 90.5\% (80.6–95.7) for health-care professionals. Interpretation
-    Our review found the diagnostic performance of deep learning models
-    to be equivalent to that of health-care professionals. However, a
-    major finding of the review is that few studies presented externally
-    validated results or compared the performance of deep learning
-    models and health-care professionals using the same sample.
-    Additionally, poor reporting is prevalent in deep learning studies,
-    which limits reliable interpretation of the reported diagnostic
-    accuracy. New reporting standards that address specific challenges
-    of deep learning could improve future studies, enabling greater
-    confidence in the results of future evaluations of this promising
-    technology. Funding None.}
+    calculation of test accuracy, with sensitivity ranging from 9·7}
 }
 @article{Arain2023,
   author = {Arain, Zara and Iliodromiti, Stamatina and Slabaugh, Gregory
@@ -1936,17 +1803,9 @@
     correlation coefficient (ICC) was used to evaluate intra- and
     interobserver reproducibility. Results For each series of
     measurements, intra- and interobserver reproducibility rates were
-    high with ICC values\textgreater0.98. The 95\% confidence intervals
-    between the BPD measurements were 2mm (3D versus 2D) and 4mm (3D
-    auto versus 2D) and the HC measurements were 7.5mm (3D versus 2D)
-    and 11mm (3D auto versus 2D). Conclusion Fetal head measurements
-    obtained automatically by Smartplanes® software from 3D volumes show
-    good agreement with those obtained by two experienced sonographers
-    from conventional 2D images and 3D volumes. The reproducibility of
-    these measurements is similar to that observed by experienced
-    sonographers.}
+    high with ICC values\textgreater0.98. The 95}
 }
-@article{Zaninović2020,
+@article{Zaninovic2020,
   author = {Zaninović, Nikica and Zaninovic, Nikica and Rosenwaks, Zev},
   title = {Artificial Intelligence in Human in Vitro Fertilization and
     Embryology},
@@ -1979,7 +1838,7 @@
 }
 @article{Martinez-Mas2019,
   author = {Martínez-Más, José and Bueno-Crespo, Andrés and Khazendar,
-    Shan and Remezal‐Solano, Manuel and Remezal-Solano, Manuel and
+    Shan and Remezal-Solano, Manuel and Remezal-Solano, Manuel and
     Martínez-Cendán, Juan-Pedro and Jassim, Sabah and Du, Hongbo and
     Assam, Hisham Al and Bourne, Tom and Timmerman, Dirk},
   title = {Evaluation of Machine Learning Methods with {Fourier}
@@ -2007,17 +1866,7 @@
     for performing the classification stage: K-Nearest Neighbors (KNN),
     Linear Discriminant (LD), Support Vector Machine (SVM) and Extreme
     Learning Machine (ELM). Results: According to our obtained results,
-    the KNN classifier provides inaccurate predictions (less than 60\%
-    of accuracy) independently of the size of the local approximation,
-    whereas the classifiers based on LD, SVM and ELM are robust in this
-    biomedical classification (more than 85\% of accuracy). Conclusions:
-    ML methods can be efficiently used for developing the classification
-    stage in computer-aided diagnosis systems of ovarian tumor from
-    ultrasound images. These approaches are able to provide automatic
-    classification with a high rate of accuracy. Future work should aim
-    at enhancing the classifier design using ensemble techniques.
-    Another ongoing work is to exploit different kind of features
-    extracted from ultrasound images.}
+    the KNN classifier provides inaccurate predictions (less than 60}
 }
 @article{Alikkal2023,
   author = {Alikkal, Vinish and Sujina, S.},
@@ -2059,7 +1908,7 @@
     pragmatic and ecological validation of medical AI systems in
     real-world settings is difficult, even when these systems exhibit
     very high accuracy in laboratory settings. This difficulty has been
-    called the ”last mile of implementation.” In this review of the
+    called the “last mile of implementation.” In this review of the
     concept, we claim that this metaphorical mile presents two chasms:
     the hiatus of human trust and the hiatus of machine experience. The
     former hiatus encompasses all that can hinder the concrete use of AI
@@ -2069,7 +1918,7 @@
     against the machine (clearly the opposite). The latter hiatus, on
     the other hand, relates to the production and availability of a
     sufficient amount of reliable and accurate clinical data that is
-    suitable to be the ”experience” with which a machine can be trained.
+    suitable to be the “experience” with which a machine can be trained.
     In briefly reviewing the existing literature, we focus on this
     latter hiatus of the last mile, as it has been largely neglected by
     both ML developers and doctors. In doing so, we argue that efforts
@@ -2108,18 +1957,7 @@
     assessed ML- and human-generated RT treatment plans in a blinded
     manner following a priori defined standardized criteria and peer
     review processes, with the selected RT plan in the prospective phase
-    delivered for patient treatment. Overall, 89\% of ML-generated RT
-    plans were considered clinically acceptable and 72\% were selected
-    over human-generated RT plans in head-to-head comparisons. RT
-    planning using ML reduced the median time required for the entire RT
-    planning process by 60.1\% (118 to 47h). While ML RT plan
-    acceptability remained stable between the simulation and deployment
-    phases (92 versus 86\%), the number of ML RT plans selected for
-    treatment was significantly reduced (83 versus 61\%, respectively).
-    These findings highlight that retrospective or simulated evaluation
-    of ML methods, even under expert blinded review, may not be
-    representative of algorithm acceptance in a real-world clinical
-    setting when patient care is at stake.}
+    delivered for patient treatment. Overall, 89}
 }
 @article{Adlung2021,
   author = {Adlung, Lorenz and Cohen, Y. and Cohen, Yotam and Mor, Uria
