refactor:  - File load and save implemented in a class

--- a/notebooks/convert_files/nb_load2export.ipynb
+++ b/notebooks/convert_files/nb_load2export.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from lib import pd, load_ext, save_ext\n",
+    "from lib import pd, FileDriver\n",
     "\n",
     "import tkinter as tk\n",
     "from tkinter import filedialog"
@@ -24,25 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bd96e1d5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('/home/omarpr/Dropbox/Brain/data/inper/obeso/sx_metabolico_2025/dbs/sx_metabolico_2025.ext.v2',\n",
-       " '.sav')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "root = tk.Tk()\n",
     "root.withdraw()\n",
     "\n",
@@ -54,23 +40,23 @@
     "        (\"Excel files\", \"*.xsl\"),\n",
     "        (\"Excel 2005 files\", \"*.xlsx\")\n",
     "    ]\n",
-    ")\n",
-    "os.path.splitext(path_file)"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "62333603",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = FileDriver()\n",
+    "data = file.load(path_file)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "62333603",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = load_ext(path_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "4b7cfa60",
    "metadata": {},
    "outputs": [
@@ -304,7 +290,7 @@
        "[279 rows x 22 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
