--- a/notebooks/convert_files/nb_load2export.ipynb
+++ b/notebooks/convert_files/nb_load2export.ipynb
@@ -10,16 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "13d2e259",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from lib import pd, FileDriver\n",
-    "\n",
-    "import tkinter as tk\n",
-    "from tkinter import filedialog"
+    "\n"
    ]
   },
   {
@@ -56,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "4b7cfa60",
    "metadata": {},
    "outputs": [
@@ -290,7 +288,7 @@
        "[279 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a8950023",
    "metadata": {},
    "outputs": [
@@ -336,8 +334,7 @@
     "    ]\n",
     ")\n",
     "#\n",
-    "pfname, ext = os.path.splitext(path_file)\n",
-    "save_ext(data, pfname, ext[1:])"
+    "file.save(data, path_file)"
    ]
   }
  ],
